Version-1 | Fixed alignment issues

--- a/portfolio/src/app/modules/home/home.component.scss
+++ b/portfolio/src/app/modules/home/home.component.scss
@@ -56,7 +56,7 @@
 @media (max-width: 768px) {
     .home {
         text-align: center;
-        gap: 0rem;
+        gap: 3rem;
     }
 
     .home .image img {
