--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -119,7 +119,9 @@ a {
     html {
         font-size: 55%;
     }
+}
 
+@media (min-width: 768px) and (max-width: 1200px) {
     section {
         padding: 3rem 2rem;
     }
@@ -130,6 +132,10 @@ a {
         font-size: 12vw;
     }
 
+    section {
+        padding: 10vh 9%;
+        padding: 10svh 9%;
+    }
 }
 
 @media (max-width: 450px) {
